--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "@ngrx/schematics": "^10.0.1",
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
+    "@stomp/stompjs": "^6.0.0",
+    "@types/sockjs-client": "^1.1.1",
+    "@types/stompjs": "^2.3.4",
     "rxjs": "~6.6.0",
+    "sockjs-client": "^1.5.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
